--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,8 @@
 
         .ant-advanced-search-form {
             padding: 24px;
-            background: #c8c9c3;
-            border: 1px solid #141414;
+            background: lightgray;
+            border: 1px solid black;
             border-radius: 6px;
         }
     </style>
