--- a/client/index.html
+++ b/client/index.html
@@ -16,9 +16,9 @@
 
         .ant-advanced-search-form {
             padding: 24px;
-            background: lightgray;
+            /* background: lightgray;
             border: 1px solid black;
-            border-radius: 6px;
+            border-radius: 6px; */
         }
     </style>
 </head>
