--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,16 @@
             border: 1px solid black;
             border-radius: 6px; */
         }
+        .center-div {
+            position: absolute;
+            margin: auto;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 100px;
+            height: 100px;
+        }
     </style>
 </head>
 
