--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
             border: 1px solid black;
             border-radius: 6px; */
         }
+
         .center-div {
             position: absolute;
             margin: auto;
@@ -29,6 +30,11 @@
             left: 0;
             width: 100px;
             height: 100px;
+        }
+
+        .center-div-horizontal {
+            display: table;
+            margin: 0 auto;
         }
     </style>
 </head>
